--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/home/yazmeh/Downloads/apache-tomcat-8.5.9/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/home/yazmeh/Downloads/apache-tomcat-8.5.9/lib/jsp-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
